--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,28 @@
 # Ignore Play! working directory #
+
+logs
+target
+/.idea
+/.idea_modules
+/.classpath
+/.project
+/.settings
+/RUNNING_PID
+
 bin/
 /db
 .eclipse
 /lib/
-/logs/
 /modules
-/project/project
-/project/target
-/target
+/project/project/target/
+project/target/
 tmp/
 test-result
 server.pid
 *.eml
 /dist/
 .cache
+.gradle
+.sbtserver
+
+/conf/evolutions.default/
